[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/Menu/mathieu-chauderlot-room-0010-layer-18.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/newvolumebackbutton.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Menu/MainMenu/newvolumeslider.gd" type="Script" id=3]
[ext_resource path="res://Art/Menu/Valorax-lg25V.otf" type="DynamicFontData" id=6]
[ext_resource path="res://GB Sound Assets/Menu Select 2.wav" type="AudioStream" id=7]
[ext_resource path="res://GB Sound Assets/cave-temple-fantasy-dark-20185.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.247059, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1300.0
margin_bottom = 780.0
rect_scale = Vector2( 0.8, 0.7 )

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 657, 460 )
scale = Vector2( 0.683854, 0.84537 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Control"]
margin_left = -5.0
margin_top = 49.0
margin_right = 1302.0
margin_bottom = 230.0
size_flags_stretch_ratio = 1.77
custom_colors/font_color = Color( 0.360784, 0.219608, 0.160784, 1 )
custom_colors/font_outline_modulate = Color( 0.286275, 0.196078, 0.196078, 1 )
custom_colors/font_color_shadow = Color( 0.74902, 0.752941, 0.537255, 1 )
custom_fonts/font = SubResource( 1 )
text = "The Fortniters"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Label"]
__meta__ = {
"_editor_description_": "The Fortniters"
}

[node name="volume" type="Button" parent="Control"]
margin_left = 446.25
margin_top = 232.857
margin_right = 879.25
margin_bottom = 318.857
text = "Volume"

[node name="Adjust volume" type="Button" parent="Control/volume"]
margin_left = -4.0
margin_top = -4.0
margin_right = 435.0
margin_bottom = 91.0
text = "Adjust volume"

[node name="Clicksound2" type="AudioStreamPlayer" parent="Control/volume/Adjust volume"]
stream = ExtResource( 7 )

[node name="return" type="Button" parent="Control"]
margin_left = 448.75
margin_top = 534.286
margin_right = 881.75
margin_bottom = 620.286
text = "Return to Menu"

[node name="backtomenu" type="Button" parent="Control/return"]
margin_left = -11.0
margin_top = -9.0
margin_right = 440.0
margin_bottom = 86.0
text = "Return  Back"
script = ExtResource( 2 )

[node name="Clicksound4" type="AudioStreamPlayer" parent="Control/return/backtomenu"]
stream = ExtResource( 7 )

[node name="Backgroundmusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="HSlider" type="HSlider" parent="."]
margin_left = 291.0
margin_top = 211.0
margin_right = 769.0
margin_bottom = 361.0
min_value = -30.0
max_value = 0.0
script = ExtResource( 3 )

[connection signal="button_down" from="Control/return/backtomenu" to="Control/return/backtomenu" method="_on_backtomenu_button_down"]
[connection signal="pressed" from="Control/return/backtomenu" to="Control/return/backtomenu" method="_on_backtomenu_pressed"]
[connection signal="value_changed" from="HSlider" to="HSlider" method="_on_HSlider_value_changed"]
